# morphi_lab

./: .gitignore  README.md  blah.avi  config.yaml  demo.ipynb  diffuser.py  environment.yml  main.py  notes.txt  object_diffusion_demo.ipynb  processor.py  pyproject.toml  requirements.txt  segmenter.py  shape_e_test.ipynb  track.py  utilities.py
.github/workflows/: test.yml
demo_notebooks/: 1_single_image_demos.ipynb
morphi_lab/: av.py  depther.py  segmenter.py
morphi_tests/: 1_basic_recording.py  1_optical_flow.py  3_depth_detect.py  __init__.py  test.py  utilities_image.py  utilities_video.py
scatch_notebooks/: 3_image_demo_scratch.ipynb
scratch_notebooks/: 1_pipeline_image.ipynb  2_video_pipeline_unoptimized.ipynb  3_image_demo_scratch.ipynb
scratch_notebooks /: 2_video_pipeline_unoptimized.ipynb
test_data/test_input/: t1.mov  test_1.mov
test_runs/test_av/: live_video.py  record_live_video.py
test_runs/test_depther/: file_video.py
test_runs/test_difuser/: file_video.py
test_runs/test_segmenter/: file_video.py  live_video.py
