[tool.poetry]
name = "morphi_tests"
version = "0.1.0"
description = ""
authors = ["Jeremy Watt <jermwatt@gmail.com>"]
readme = "README.md"
packages = [{include = "morphi_tests"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.1"
torch = "^2.0.1"
transformers = "^4.29.2"
timm = "^0.9.2"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
pytube = "^15.0.0"
ffmpeg = "^1.4"
opencv-python = "^4.7.0.72"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
